--- a/ManagMe/backend/authapi/package.json
+++ b/ManagMe/backend/authapi/package.json
@@ -10,9 +10,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@types/node": "^22.15.23",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
