--- a/ManagMe/backend/authapi/package.json
+++ b/ManagMe/backend/authapi/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase": "^11.8.1",
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.1"
   },
